# compile_time_utility

./: CMakeLists.txt  test  test.ilk
include/: const_array.h  const_dict.h  const_pair.h  const_tuple.h  hash.h  size.h  string_enum.h
source/: main.cpp  test_compile_time_member_name.h  test_compile_time_objects.h  test_size.h
